# Simple-Chat-App

./: .gitignore  CMakeLists.txt  README.md
client/: chat_client.cpp  chat_client.h  client_main.cpp
common/: definitions.h  packet.h
server/: chat_server.cpp  chat_server.h  client_session.h  message_store.h  server_main.cpp
transport/: reliable_session.cpp  reliable_session.h  test.cpp  udp_socket.cpp  udp_socket.h
